Errors on csv document and Zeitberechnung